--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
   <div class="logo">
     <div class="img">
-      <image src="/rupesh1.jpg"></image>
+      <image src="rupesh1.jpg"></image>
     </div>
     <h2>RUPESH KUMAR</h2>
    
